--- a/source/Ncs/Ncs.EventSourcing/Ncs.EventSourcing.csproj
+++ b/source/Ncs/Ncs.EventSourcing/Ncs.EventSourcing.csproj
@@ -1,10 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Confluent.Kafka" Version="2.0.2" />
+  </ItemGroup>
 
 </Project>
