--- a/source/Ncs/Ncs.Explore.Cli/Ncs.Explore.Cli.csproj
+++ b/source/Ncs/Ncs.Explore.Cli/Ncs.Explore.Cli.csproj
@@ -1,25 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<OutputType>exe</OutputType>
+		<OutputType>Exe</OutputType>
 		<TargetFramework>net7.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\SAK\SAK\SAK.csproj" />
-		<ProjectReference Include="..\Ncs.Solicitor.Data\Ncs.Solicitor.Data.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<PackageReference Include="Dapper" Version="2.0.123" />
-		<PackageReference Include="FluentMigrator" Version="3.3.2" />
-		<PackageReference Include="FluentMigrator.Runner" Version="3.3.2" />
-		<PackageReference Include="FluentMigrator.Runner.Core" Version="3.3.2" />
-		<PackageReference Include="FluentMigrator.Runner.Postgres" Version="3.3.2" />
-		<PackageReference Include="Npgsql" Version="7.0.1" />
-		<PackageReference Include="SqlKata" Version="2.4.0" />
+		<PackageReference Include="Confluent.Kafka" Version="2.0.2" />
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
