--- a/source/Ncs/Ncs.Explore.Cli/appsettings.ini
+++ b/source/Ncs/Ncs.Explore.Cli/appsettings.ini
@@ -1,2 +1,18 @@
-[Kafka]
-HostUrls=localhost:29092
+
+[KafkaTest.1]
+bootstrap.servers=localhost:9092
+group.id = kafka-dotnet-getting-started
+auto.offset.reset = earliest
+
+[KafkaTest.2]
+bootstrap.servers=localhost:9092
+group.id = kafka-dotnet-getting-started-2
+auto.offset.reset = earliest
+
+[KafkaTest.3]
+bootstrap.servers=localhost:9092
+group.id = kafka-dotnet-getting-started-3
+auto.offset.reset = earliest
+
+#[Kafka]
+#HostUrls=localhost:29092
