--- a/source/Ncs/Ncs.ActionEngine.Core/Ncs.ActionEngine.Core.csproj
+++ b/source/Ncs/Ncs.ActionEngine.Core/Ncs.ActionEngine.Core.csproj
@@ -7,11 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="SmartAnalyzers.CSharpExtensions.Annotations" Version="4.2.8" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Database\Settlement\Payment\" />
+    <PackageReference Include="NLua" Version="1.6.0" />
   </ItemGroup>
 
 </Project>
