--- a/source/Ncs/Ncs.Explore.Cli/Ncs.Explore.Cli.csproj
+++ b/source/Ncs/Ncs.Explore.Cli/Ncs.Explore.Cli.csproj
@@ -9,6 +9,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="Confluent.Kafka" Version="2.0.2" />
+		<PackageReference Include="EventStore.Client.Grpc.Streams" Version="22.0.0" />
+		<PackageReference Include="EventStore.Client.Grpc.ProjectionManagement" Version="22.0.0" />
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
