--- a/source/Ncs/Ncs.EventSourcing/Ncs.EventSourcing.csproj
+++ b/source/Ncs/Ncs.EventSourcing/Ncs.EventSourcing.csproj
@@ -1,13 +1,32 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Confluent.Kafka" Version="2.0.2" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Confluent.Kafka" Version="2.0.2" />
+		<PackageReference Include="EventStore.Client.Grpc.Streams" Version="22.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="CSharpVitamins.ShortGuid" Version="2.0.0" />
+		<PackageReference Include="Serilog" Version="2.12.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Options" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.2" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\..\SAK\SAK\SAK.csproj" />
+		<ProjectReference Include="..\Ncs.Domain\Ncs.Domain.csproj" />
+		<ProjectReference Include="..\Ncs.Model\Ncs.Model.csproj" />
+	</ItemGroup>
 
 </Project>
