--- a/source/Ncs/Ncs.EventSourcing/Ncs.EventSourcing.csproj
+++ b/source/Ncs/Ncs.EventSourcing/Ncs.EventSourcing.csproj
@@ -12,7 +12,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="CSharpVitamins.ShortGuid" Version="2.0.0" />
+		<!--<PackageReference Include="CSharpVitamins.ShortGuid" Version="2.0.0" />-->
+		<PackageReference Include="Base62" Version="1.3.0" />
 		<PackageReference Include="Serilog" Version="2.12.0" />
 	</ItemGroup>
 
