--- a/source/Ncs/Ncs.ActionEngine.Core/Ncs.ActionEngine.Core.csproj
+++ b/source/Ncs/Ncs.ActionEngine.Core/Ncs.ActionEngine.Core.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NLua" Version="1.6.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.4.0" />
   </ItemGroup>
 
 </Project>
