--- a/source/N2/N2.Api.Http/N2.Api.Http.csproj
+++ b/source/N2/N2.Api.Http/N2.Api.Http.csproj
@@ -12,10 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\N2.Domain\N2.Domain.csproj" />
-    <ProjectReference Include="..\N2.EventSourcing.Common\N2.EventSourcing.Common.csproj" />
-    <ProjectReference Include="..\N2.EventSourcing\N2.EventSourcing.csproj" />
-    <ProjectReference Include="..\N2.Model\N2.Model.csproj" />
+    <ProjectReference Include="..\N2.Api.Core\N2.Api.Core.csproj" />
   </ItemGroup>
 
 </Project>
