types and tests

--- a/source/N2/N2.Api.Core.Test/N2.Api.Core.Test.csproj
+++ b/source/N2/N2.Api.Core.Test/N2.Api.Core.Test.csproj
@@ -18,12 +18,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="EventStore.Client.Grpc.Streams" Version="22.0.0" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<ProjectReference Include="..\N2.Domain\N2.Domain.csproj" />
-		<ProjectReference Include="..\N2.Model\N2.Model.csproj" />
+		<ProjectReference Include="..\N2.Api.Core\N2.Api.Core.csproj" />
 		<ProjectReference Include="..\N2.Test.Common\N2.Test.Common.csproj" />
 	</ItemGroup>
 
