--- a/source/N3/N3.CqrsEs/N3.CqrsEs.csproj
+++ b/source/N3/N3.CqrsEs/N3.CqrsEs.csproj
@@ -8,6 +8,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Base62-Net" Version="1.2.157201" />
+		<PackageReference Include="SmartAnalyzers.CSharpExtensions.Annotations" Version="4.2.8" />
 	</ItemGroup>
 
 	<ItemGroup>
