--- a/source/N3/N3.CqrsEs.Test/N3.CqrsEs.Test.csproj
+++ b/source/N3/N3.CqrsEs.Test/N3.CqrsEs.Test.csproj
@@ -18,6 +18,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\N3.CqrsEs\N3.CqrsEs.csproj" />
+        <ProjectReference Include="..\N3\N3.csproj" />
     </ItemGroup>
 
     <ItemGroup>
