--- a/source/N3/N3.CqrsEs/N3.CqrsEs.csproj
+++ b/source/N3/N3.CqrsEs/N3.CqrsEs.csproj
@@ -9,10 +9,10 @@
 	<ItemGroup>
 		<PackageReference Include="Base62-Net" Version="1.2.157201" />
 		<PackageReference Include="SmartAnalyzers.CSharpExtensions.Annotations" Version="4.2.8" />
-	</ItemGroup>
+        <PackageReference Include="Cqrs" Version="4.4.1.24" />
+    </ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\..\submodules\CQRSlite\Framework\CQRSlite\CQRSlite.csproj" />
 		<ProjectReference Include="..\N3.Modell\N3.Modell.csproj" />
 	</ItemGroup>
 
