--- a/source/N3/N3.CqrsEs.Test/N3.CqrsEs.Test.csproj
+++ b/source/N3/N3.CqrsEs.Test/N3.CqrsEs.Test.csproj
@@ -23,6 +23,8 @@
 
     <ItemGroup>
         <PackageReference Include="Scrutor" Version="3.3.0" />
+        <PackageReference Include="Cqrs" Version="4.4.1.24" />
+        <PackageReference Include="Ben.Demystifier" Version="0.4.1" />
 
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
