--- a/source/N3/N3.CqrsEs.Ramverk/N3.CqrsEs.Ramverk.csproj
+++ b/source/N3/N3.CqrsEs.Ramverk/N3.CqrsEs.Ramverk.csproj
@@ -5,8 +5,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
     <ItemGroup>
-        <PackageReference Include="Base62-Net" Version="1.2.157201" />
+        <PackageReference Include="SmartAnalyzers.CSharpExtensions.Annotations" Version="4.2.8" />
     </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\N3\N3.csproj" />
+    </ItemGroup>
+
 </Project>
