--- a/source/N3/N3.Modell.Test/N3.Modell.Test.csproj
+++ b/source/N3/N3.Modell.Test/N3.Modell.Test.csproj
@@ -18,6 +18,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\N3.Modell\N3.Modell.csproj" />
+	  <ProjectReference Include="..\N3\N3.csproj" />
 	</ItemGroup>
 
 </Project>
