--- a/source/N3/N3.CqrsEs.Test/N3.CqrsEs.Test.csproj
+++ b/source/N3/N3.CqrsEs.Test/N3.CqrsEs.Test.csproj
@@ -17,13 +17,16 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\N3.CqrsEs.Gemensam\N3.CqrsEs.Gemensam.csproj" />
+        <ProjectReference Include="..\N3.CqrsEs.LäsModell\N3.CqrsEs.LäsModell.csproj" />
+        <ProjectReference Include="..\N3.CqrsEs.Ramverk\N3.CqrsEs.Ramverk.csproj" />
+        <ProjectReference Include="..\N3.CqrsEs.SkrivModell\N3.CqrsEs.SkrivModell.csproj" />
         <ProjectReference Include="..\N3.CqrsEs\N3.CqrsEs.csproj" />
+        <ProjectReference Include="..\N3.Modell\N3.Modell.csproj" />
         <ProjectReference Include="..\N3\N3.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Scrutor" Version="3.3.0" />
-        <PackageReference Include="Cqrs" Version="4.4.1.24" />
         <PackageReference Include="Ben.Demystifier" Version="0.4.1" />
 
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
