--- a/source/dataz/tsconfig.json
+++ b/source/dataz/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "ES2022",
     "module": "ES2022",
-    "sourceMap": true
+    "sourceMap": true,
+    "strictNullChecks": true,
   }
 }
