--- a/source/N3/N3.CqrsEs.LäsModell/N3.CqrsEs.LäsModell.csproj
+++ b/source/N3/N3.CqrsEs.LäsModell/N3.CqrsEs.LäsModell.csproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="SmartAnalyzers.CSharpExtensions.Annotations" Version="4.2.8" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\N3.CqrsEs.Gemensam\N3.CqrsEs.Gemensam.csproj" />
