--- a/source/SAK/SAK/SAK.csproj
+++ b/source/SAK/SAK/SAK.csproj
@@ -1,9 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Urdep.Extensions.Augmentation" Version="0.2.0" />
+  </ItemGroup>
 
 </Project>
