--- a/source/N3/N3.App.Domän.Api.Web/N3.App.Domän.Api.Web.csproj
+++ b/source/N3/N3.App.Domän.Api.Web/N3.App.Domän.Api.Web.csproj
@@ -15,6 +15,8 @@
     <ProjectReference Include="..\N3.CqrsEs.Gemensam\N3.CqrsEs.Gemensam.csproj" />
     <ProjectReference Include="..\N3.CqrsEs.Ramverk\N3.CqrsEs.Ramverk.csproj" />
     <ProjectReference Include="..\N3.CqrsEs.SkrivModell\N3.CqrsEs.SkrivModell.csproj" />
+    <ProjectReference Include="..\N3.Infrastruktur.Gemensam\N3.Infrastruktur.Gemensam.csproj" />
+    <ProjectReference Include="..\N3.Låtsas\N3.Låtsas.csproj" />
     <ProjectReference Include="..\N3.Modell\N3.Modell.csproj" />
     <ProjectReference Include="..\N3\N3.csproj" />
   </ItemGroup>
