--- a/source/N3/N3.App.Domän.Api.Web/appsettings.json
+++ b/source/N3/N3.App.Domän.Api.Web/appsettings.json
@@ -7,6 +7,10 @@
     },
     "AllowedHosts": "*",
     "Låtsas": {
-        "Katalog": "c:/code/n3"
+        "Katalog": "c:/code/n3",
+        "ConnectionStrings": {
+            "Postgres": "Host=localhost:5432;Username=ncsusr;Password=abc123;Database=postgres",
+            "Marten": "Host=localhost:5432;Username=ncsusr;Password=abc123;Database=postgres"
+        }
     }
 }
