--- a/source/N3/N3.Låtsas/N3.Låtsas.csproj
+++ b/source/N3/N3.Låtsas/N3.Låtsas.csproj
@@ -13,10 +13,15 @@
     <ItemGroup>
         <PackageReference Include="Dapper" Version="2.0.123" />
         <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.3" />
+        <PackageReference Include="Npgsql" Version="7.0.2" />
+        <!--<PackageReference Include="Marten" Version="5.11.0" />-->
+        <PackageReference Include="Marten" Version="6.0.0-alpha.8" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.0" />
-
         <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
     </ItemGroup>
 
