--- a/source/N3/N3.CqrsEs.Infrastruktur.Marten/N3.CqrsEs.Infrastruktur.Marten.csproj
+++ b/source/N3/N3.CqrsEs.Infrastruktur.Marten/N3.CqrsEs.Infrastruktur.Marten.csproj
@@ -7,13 +7,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Marten" Version="5.11.0" />
+        <!--<PackageReference Include="Marten" Version="5.11.0" />-->
+        <!--<PackageReference Include="Marten" Version="6.0.0-alpha.8" />-->
         <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\..\..\marten\src\Marten\Marten.csproj" />
         <ProjectReference Include="..\..\SAK\SAK\SAK.csproj" />
         <ProjectReference Include="..\N3.CqrsEs.Ramverk\N3.CqrsEs.Ramverk.csproj" />
         <ProjectReference Include="..\N3.Infrastruktur.Gemensam\N3.Infrastruktur.Gemensam.csproj" />
