--- a/source/N3/N3.App.Domän.Api.Web/appsettings.json
+++ b/source/N3/N3.App.Domän.Api.Web/appsettings.json
@@ -12,5 +12,8 @@
             "Postgres": "Host=localhost:5432;Username=ncsusr;Password=abc123;Database=postgres",
             "Marten": "Host=localhost:5432;Username=ncsusr;Password=abc123;Database=postgres"
         }
+    },
+    "ConnectionStrings": {
+        "Rebus": "Host=localhost:5432;Username=ncsusr;Password=abc123;Database=postgres;Maximum Pool Size=30"
     }
 }
