--- a/source/N3/N3.App.Ombud.Web/appsettings.json
+++ b/source/N3/N3.App.Ombud.Web/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "Rebus": "Host=localhost:5432;Username=ncsusr;Password=abc123;Database=postgres;Maximum Pool Size=30"
+    },
 }
