--- a/source/N3/N3.App.Domän.Api.Web/N3.App.Domän.Api.Web.csproj
+++ b/source/N3/N3.App.Domän.Api.Web/N3.App.Domän.Api.Web.csproj
@@ -1,24 +1,38 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net7.0</TargetFramework>
+        <Nullable>enable</Nullable>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <NoWarn>$(NoWarn);1591</NoWarn>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.2" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.2" />
+        <!--<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />-->
+        <!--<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />-->
+        <PackageReference Include="NSwag.Annotations" Version="13.18.2" />
+        <PackageReference Include="NSwag.AspNetCore" Version="13.18.2" />
+        <PackageReference Include="CacheTower" Version="0.13.0" />
+        <PackageReference Include="CacheTower.Providers.Redis" Version="0.13.0" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\N3.CqrsEs.Gemensam\N3.CqrsEs.Gemensam.csproj" />
-    <ProjectReference Include="..\N3.CqrsEs.Ramverk\N3.CqrsEs.Ramverk.csproj" />
-    <ProjectReference Include="..\N3.CqrsEs.SkrivModell\N3.CqrsEs.SkrivModell.csproj" />
-    <ProjectReference Include="..\N3.Infrastruktur.Gemensam\N3.Infrastruktur.Gemensam.csproj" />
-    <ProjectReference Include="..\N3.Låtsas\N3.Låtsas.csproj" />
-    <ProjectReference Include="..\N3.Modell\N3.Modell.csproj" />
-    <ProjectReference Include="..\N3\N3.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Rebus" Version="7.0.0" />
+        <PackageReference Include="Rebus.PostgreSql" Version="8.1.0" />
+        <PackageReference Include="Rebus.ServiceProvider" Version="8.4.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\N3.CqrsEs.Gemensam\N3.CqrsEs.Gemensam.csproj" />
+        <ProjectReference Include="..\N3.CqrsEs.Ramverk\N3.CqrsEs.Ramverk.csproj" />
+        <ProjectReference Include="..\N3.CqrsEs.SkrivModell\N3.CqrsEs.SkrivModell.csproj" />
+        <ProjectReference Include="..\N3.Infrastruktur.Gemensam\N3.Infrastruktur.Gemensam.csproj" />
+        <ProjectReference Include="..\N3.Låtsas\N3.Låtsas.csproj" />
+        <ProjectReference Include="..\N3.Modell\N3.Modell.csproj" />
+        <ProjectReference Include="..\N3\N3.csproj" />
+    </ItemGroup>
 
 </Project>
