--- a/source/N3/N3.App.Ombud.Web/N3.App.Ombud.Web.csproj
+++ b/source/N3/N3.App.Ombud.Web/N3.App.Ombud.Web.csproj
@@ -6,4 +6,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Rebus" Version="7.0.0" />
+        <PackageReference Include="Rebus.PostgreSql" Version="8.1.0" />
+        <PackageReference Include="Rebus.ServiceProvider" Version="8.4.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\N3.App.Domän.Api.Web\N3.App.Domän.Api.Web.csproj" />
+    </ItemGroup>
 </Project>
