--- a/source/N3/N3.App.Domän.Api.Web/appsettings.json
+++ b/source/N3/N3.App.Domän.Api.Web/appsettings.json
@@ -1,8 +1,8 @@
 {
     "Logging": {
         "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
+            "Default": "Trace",
+            "Microsoft.AspNetCore": "Trace"
         }
     },
     "AllowedHosts": "*",
@@ -14,6 +14,7 @@
         }
     },
     "ConnectionStrings": {
-        "Rebus": "Host=localhost:5432;Username=ncsusr;Password=abc123;Database=postgres;Maximum Pool Size=30"
+        "Postgres": "Host=localhost:5432;Username=ncsusr;Password=abc123;Database=postgres",
+        "Marten": "Host=localhost:5432;Username=ncsusr;Password=abc123;Database=postgres"
     }
 }
