--- a/source/N3/N3.App.Domän.Api.Web/N3.App.Domän.Api.Web.csproj
+++ b/source/N3/N3.App.Domän.Api.Web/N3.App.Domän.Api.Web.csproj
@@ -20,13 +20,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Rebus" Version="7.0.0" />
-        <PackageReference Include="Rebus.PostgreSql" Version="8.1.0" />
-        <PackageReference Include="Rebus.ServiceProvider" Version="8.4.0" />
-    </ItemGroup>
-
-    <ItemGroup>
         <ProjectReference Include="..\N3.CqrsEs.Gemensam\N3.CqrsEs.Gemensam.csproj" />
+        <ProjectReference Include="..\N3.CqrsEs.Infrastruktur.Marten\N3.CqrsEs.Infrastruktur.Marten.csproj" />
         <ProjectReference Include="..\N3.CqrsEs.Ramverk\N3.CqrsEs.Ramverk.csproj" />
         <ProjectReference Include="..\N3.CqrsEs.SkrivModell\N3.CqrsEs.SkrivModell.csproj" />
         <ProjectReference Include="..\N3.Infrastruktur.Gemensam\N3.Infrastruktur.Gemensam.csproj" />
