--- a/source/N3/N3.App.Ombud.Web/N3.App.Ombud.Web.csproj
+++ b/source/N3/N3.App.Ombud.Web/N3.App.Ombud.Web.csproj
@@ -7,9 +7,7 @@
   </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Rebus" Version="7.0.0" />
-        <PackageReference Include="Rebus.PostgreSql" Version="8.1.0" />
-        <PackageReference Include="Rebus.ServiceProvider" Version="8.4.0" />
+        <PackageReference Include="Yarp.ReverseProxy" Version="2.0.0" />
     </ItemGroup>
 
     <ItemGroup>
