--- a/source/N3/N3.App.Ombud.Web/appsettings.json
+++ b/source/N3/N3.App.Ombud.Web/appsettings.json
@@ -2,11 +2,30 @@
     "Logging": {
         "LogLevel": {
             "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
+            "Microsoft": "Warning"
         }
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "Rebus": "Host=localhost:5432;Username=ncsusr;Password=abc123;Database=postgres;Maximum Pool Size=30"
     },
+
+    "ReverseProxy": {
+        "Routes": {
+            "route1": {
+                "ClusterId": "cluster1",
+                "Match": {
+                    "Path": "/api/{**catch-all}"
+                }
+            }
+        },
+        "Clusters": {
+            "cluster1": {
+                "Destinations": {
+                    "destination1": {
+                        "Address": "http://localhost:5298/"
+                    }
+                }
+            }
+        }
+    }
 }
