--- a/source/N3/N3.App.Domän.Api.Web/appsettings.json
+++ b/source/N3/N3.App.Domän.Api.Web/appsettings.json
@@ -1,11 +1,12 @@
 {
+    "AllowedHosts": "*",
     "Logging": {
         "LogLevel": {
-            "Default": "Trace",
-            "Microsoft.AspNetCore": "Trace"
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Information"
         }
     },
-    "AllowedHosts": "*",
+    "EnablePingPong": false,
     "Låtsas": {
         "Katalog": "c:/code/n3",
         "ConnectionStrings": {
@@ -15,6 +16,7 @@
     },
     "ConnectionStrings": {
         "Postgres": "Host=localhost:5432;Username=ncsusr;Password=abc123;Database=postgres",
-        "Marten": "Host=localhost:5432;Username=ncsusr;Password=abc123;Database=postgres"
+        "Marten": "Host=localhost:5432;Username=ncsusr;Password=abc123;Database=postgres",
+        "Redis": "localhost:6379,name=api1"
     }
 }
