--- a/source/N3/N3.App.Ombud.Web/appsettings.Development.json
+++ b/source/N3/N3.App.Ombud.Web/appsettings.Development.json
@@ -2,8 +2,8 @@
     "Logging": {
         "LogLevel": {
             "Default": "Trace",
+            "Yarp": "Information",
             "Microsoft.AspNetCore": "Warning",
-            "Yarp": "Trace",
             "Microsoft.Hosting.Lifetime": "Warning"
         }
     }
