--- a/source/N3/N3.App.Ombud.Web/appsettings.json
+++ b/source/N3/N3.App.Ombud.Web/appsettings.json
@@ -1,12 +1,13 @@
 {
+    "AllowedHosts": "*",
     "Logging": {
         "LogLevel": {
             "Default": "Information",
             "Microsoft": "Warning"
         }
     },
-    "AllowedHosts": "*",
     "ConnectionStrings": {
+        "Redis": "localhost:6379,name=web1"
     },
 
     "ReverseProxy": {
@@ -22,7 +23,7 @@
             "cluster1": {
                 "Destinations": {
                     "destination1": {
-                        "Address": "http://localhost:5298/"
+                        "Address": "http://localhost:5298"
                     }
                 }
             }
