--- a/source/N3/N3.App.Domän.Api.Web/appsettings.Development.json
+++ b/source/N3/N3.App.Domän.Api.Web/appsettings.Development.json
@@ -1,8 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Trace",
+            "Microsoft.AspNetCore": "Warning",
+            "Microsoft.Hosting.Lifetime": "Warning"
+        }
     }
-  }
 }
