--- a/source/N3/N3.App.Domän.Api.Web/appsettings.json
+++ b/source/N3/N3.App.Domän.Api.Web/appsettings.json
@@ -3,20 +3,12 @@
     "Logging": {
         "LogLevel": {
             "Default": "Information",
-            "Microsoft.AspNetCore": "Information"
-        }
-    },
-    "EnablePingPong": false,
-    "Låtsas": {
-        "Katalog": "c:/code/n3",
-        "ConnectionStrings": {
-            "Postgres": "Host=localhost:5432;Username=ncsusr;Password=abc123;Database=postgres",
-            "Marten": "Host=localhost:5432;Username=ncsusr;Password=abc123;Database=postgres"
+            "Microsoft": "Warning"
         }
     },
     "ConnectionStrings": {
-        "Postgres": "Host=localhost:5432;Username=ncsusr;Password=abc123;Database=postgres",
-        "Marten": "Host=localhost:5432;Username=ncsusr;Password=abc123;Database=postgres",
-        "Redis": "localhost:6379,name=api1"
+        "Postgres": "",
+        "Marten": "",
+        "Redis": ""
     }
 }
