--- a/source/N3/N3.App.Domän.Api.Web/appsettings.Development.json
+++ b/source/N3/N3.App.Domän.Api.Web/appsettings.Development.json
@@ -2,8 +2,21 @@
     "Logging": {
         "LogLevel": {
             "Default": "Trace",
-            "Microsoft.AspNetCore": "Warning",
-            "Microsoft.Hosting.Lifetime": "Warning"
+            "Microsoft.AspNetCore": "Information",
+            "Microsoft.Hosting.Lifetime": "Information"
         }
+    },
+    "EnablePingPong": true,
+    "Låtsas": {
+        "Katalog": "c:/code/n3",
+        "ConnectionStrings": {
+            "Postgres": "Host=localhost:5432;Username=ncsusr;Password=abc123;Database=postgres",
+            "Marten": "Host=localhost:5432;Username=ncsusr;Password=abc123;Database=postgres"
+        }
+    },
+    "ConnectionStrings": {
+        "Postgres": "Host=localhost:5432;Username=ncsusr;Password=abc123;Database=postgres",
+        "Marten": "Host=localhost:5432;Username=ncsusr;Password=abc123;Database=postgres",
+        "Redis": "localhost:6379,name=api1"
     }
 }
