--- a/source/N3/N3.App.Ombud.Web/appsettings.Development.json
+++ b/source/N3/N3.App.Ombud.Web/appsettings.Development.json
@@ -3,6 +3,7 @@
         "LogLevel": {
             "Default": "Trace",
             "Yarp": "Information",
+            "SlimMessageBus": "Debug",
             "Microsoft.AspNetCore": "Warning",
             "Microsoft.Hosting.Lifetime": "Warning"
         }
