--- a/source/N3/N3.App.Domän.Api.Web/appsettings.Development.json
+++ b/source/N3/N3.App.Domän.Api.Web/appsettings.Development.json
@@ -15,8 +15,9 @@
         }
     },
     "ConnectionStrings": {
+        "Redis": "localhost:6379,name=api1",
         "Postgres": "Host=localhost:5432;Username=ncsusr;Password=abc123;Database=postgres",
         "Marten": "Host=localhost:5432;Username=ncsusr;Password=abc123;Database=postgres",
-        "Redis": "localhost:6379,name=api1"
+        "RebusPostgres": "Host=localhost:5432;Username=ncsusr;Password=abc123;Database=postgres"
     }
 }
