--- a/source/N3/N3.App.Domän.Api.Web/appsettings.json
+++ b/source/N3/N3.App.Domän.Api.Web/appsettings.json
@@ -9,6 +9,7 @@
     "ConnectionStrings": {
         "Postgres": "",
         "Marten": "",
-        "Redis": ""
+        "Redis": "",
+        "RebusPostgres": ""
     }
 }
