--- a/source/N3/N3.App.Ombud.Web/appsettings.json
+++ b/source/N3/N3.App.Ombud.Web/appsettings.json
@@ -7,7 +7,8 @@
         }
     },
     "ConnectionStrings": {
-        "Redis": "localhost:6379,name=web1"
+        "Redis": "localhost:6379,name=web1",
+        "RebusPostgres": "Host=localhost:5432;Username=ncsusr;Password=abc123;Database=postgres"
     },
 
     "ReverseProxy": {
