--- a/source/N3/N3.App.Ombud.Web/N3.App.Ombud.Web.csproj
+++ b/source/N3/N3.App.Ombud.Web/N3.App.Ombud.Web.csproj
@@ -9,13 +9,10 @@
     <ItemGroup>
         <PackageReference Include="Yarp.ReverseProxy" Version="2.0.0" />
 
-        <PackageReference Include="SlimMessageBus" Version="1.8.0" />
-        <PackageReference Include="SlimMessageBus.Host.AspNetCore" Version="1.8.0" />
-        <PackageReference Include="SlimMessageBus.Host.MsDependencyInjection" Version="1.8.0" />
-        <!--<PackageReference Include="SlimMessageBus.Host.Redis" Version="1.23.0" />-->
-        <!--<PackageReference Include="SlimMessageBus.Host.Memory" Version="1.23.0" />-->
-        <!--<PackageReference Include="SlimMessageBus.Host.Hybrid" Version="1.23.0" />-->
-        <PackageReference Include="SlimMessageBus.Host.Serialization.SystemTextJson" Version="1.5.0" />
+        <PackageReference Include="Rebus" Version="7.0.0" />
+        <PackageReference Include="Rebus.PostgreSql" Version="8.1.0" />
+        <PackageReference Include="Rebus.Microsoft.Extensions.Logging" Version="4.0.0" />
+        <PackageReference Include="Rebus.ServiceProvider" Version="8.4.0" />
     </ItemGroup>
 
     <ItemGroup>
