--- a/source/N3/N3.App.Domän.Api.Web/appsettings.Development.json
+++ b/source/N3/N3.App.Domän.Api.Web/appsettings.Development.json
@@ -14,6 +14,7 @@
             "Marten": "Host=localhost:5432;Username=ncsusr;Password=abc123;Database=postgres"
         }
     },
+    "SchemaName": "test2",
     "ConnectionStrings": {
         "Redis": "localhost:6379,name=api1",
         "Postgres": "Host=localhost:5432;Username=ncsusr;Password=abc123;Database=postgres",
